# rookpkg

./: .gitignore  Building a Bootable Linux ISO.md  CLAUDE.md  Cargo.toml  LICENSE.txt  PACKAGES.txt  README.md  build.sh  deps_report.txt  deps_report_final.txt  deps_report_v2.txt  deps_report_v3.txt  deps_report_v4.txt  deps_report_v5.txt  rookpkg.rook  test-hello.rook  test_debug_getty.py  test_debug_login.py  test_emergency.py  test_emergency2.py  test_live_login.py  test_login.py  test_normal_boot.py  test_sddm_debug.py
.beads/: issues.jsonl
.claude/: settings.local.json
scripts/: build_blfs.sh  build_blfs_chroot.sh  build_fresh_iso.sh  build_in_chroot.sh  build_kernel.sh  build_live_iso.sh  build_system.sh  check_deps.py  extract_packages.sh  fix_deps.py  package_image.sh  update_plasma_versions.py  update_source_urls.py
specs/: 7zip.rook  accountsservice.rook  acl.rook  adwaita-icon-theme.rook  alsa-lib.rook  alsa-plugins.rook  alsa-utils.rook  appmenu-gtk-module.rook  appstream.rook  aspell.rook  at-spi2-core.rook  attr.rook  autoconf.rook  automake.rook  avahi.rook  bash.rook  bc.rook  binutils.rook  bison.rook  bluedevil.rook  bluez.rook  boost.rook  breeze-gtk.rook  breeze-icons.rook  breeze.rook  brotli.rook  bubblewrap.rook  bzip2.rook  c-ares.rook  cairo.rook  calamares.rook  cargo-c.rook  check.rook  cmake.rook  coreutils.rook  cpio.rook  cppcheck.rook  cracklib.rook  cryptsetup.rook  cups.rook  (+461 more)
src/: archive.rs  build.rs  config.rs  database.rs  delta.rs  download.rs  error.rs  hooks.rs  main.rs  package.rs  repository.rs  resolver.rs  signing.rs  spec.rs  transaction.rs
src/cli/: audit.rs  autoremove.rs  build.rs  buildall.rs  check.rs  checksum.rs  delta.rs  depends.rs  groups.rs  hold.rs  hooks.rs  info.rs  inspect.rs  install.rs  keygen.rs  keys.rs  list.rs  mod.rs  recover.rs  remove.rs  repo.rs  search.rs  update.rs  upgrade.rs  verify.rs
src/cve/: database.rs  matcher.rs  mod.rs  patcher.rs
